lab1_test/project_1/hls/.autopilot/db/top.pp.0.cpp.clang-tidy.loop-label.out.log
/nethome/wsun377/ece8893/FPGA_ECE8893_1/2026_Spring/lab1_test/project_1/hls/.autopilot/db/top.pp.0.cpp:2565:5: warning: Added loop label VITIS_LOOP_676_1:   [xilinx-label-all-loops]
    for (unsigned i = low; i != high+1; ++i) {
    ^~~
    VITIS_LOOP_676_1: 
/nethome/wsun377/ece8893/FPGA_ECE8893_1/2026_Spring/lab1_test/project_1/hls/.autopilot/db/top.pp.0.cpp:2565:5: note: FIX-IT applied suggested code changes
/nethome/wsun377/ece8893/FPGA_ECE8893_1/2026_Spring/lab1_test/project_1/hls/.autopilot/db/top.pp.0.cpp:2579:5: warning: Added loop label VITIS_LOOP_690_1:   [xilinx-label-all-loops]
    for (unsigned i = low; i != high+1; ++i) {
    ^~~
    VITIS_LOOP_690_1: 
/nethome/wsun377/ece8893/FPGA_ECE8893_1/2026_Spring/lab1_test/project_1/hls/.autopilot/db/top.pp.0.cpp:2579:5: note: FIX-IT applied suggested code changes
/nethome/wsun377/ece8893/FPGA_ECE8893_1/2026_Spring/lab1_test/project_1/hls/.autopilot/db/top.pp.0.cpp:2593:5: warning: Added loop label VITIS_LOOP_704_1:   [xilinx-label-all-loops]
    for (unsigned i = low; i != high+1; ++i) {
    ^~~
    VITIS_LOOP_704_1: 
/nethome/wsun377/ece8893/FPGA_ECE8893_1/2026_Spring/lab1_test/project_1/hls/.autopilot/db/top.pp.0.cpp:2593:5: note: FIX-IT applied suggested code changes
/nethome/wsun377/ece8893/FPGA_ECE8893_1/2026_Spring/lab1_test/project_1/hls/.autopilot/db/top.pp.0.cpp:4549:7: warning: Added loop label VITIS_LOOP_1248_1:   [xilinx-label-all-loops]
      for (i = 0; i < __N - 1; ++i) {
      ^~~
      VITIS_LOOP_1248_1: 
/nethome/wsun377/ece8893/FPGA_ECE8893_1/2026_Spring/lab1_test/project_1/hls/.autopilot/db/top.pp.0.cpp:4549:7: note: FIX-IT applied suggested code changes
/nethome/wsun377/ece8893/FPGA_ECE8893_1/2026_Spring/lab1_test/project_1/hls/.autopilot/db/top.pp.0.cpp:6530:42: error: Invalid Directive: for current device, ram_t2p + bram is invalid combination for BIND_STORAGE's option 'type + impl' [clang-diagnostic-error]
#pragma HLS BIND_STORAGE variable=A type=ram_t2p impl=bram
                                         ^
/nethome/wsun377/ece8893/FPGA_ECE8893_1/2026_Spring/lab1_test/project_1/hls/.autopilot/db/top.pp.0.cpp:6531:44: error: Invalid Directive: for current device, ram_t2p + bram is invalid combination for BIND_STORAGE's option 'type + impl' [clang-diagnostic-error]
#pragma HLS BIND_STORAGE variable=tmp type=ram_t2p impl=bram
                                           ^
/nethome/wsun377/ece8893/FPGA_ECE8893_1/2026_Spring/lab1_test/project_1/hls/.autopilot/db/top.pp.0.cpp:6532:50: error: Invalid Directive: for current device, ram_1p + bram is invalid combination for BIND_STORAGE's option 'type + impl' [clang-diagnostic-error]
#pragma HLS BIND_STORAGE variable=denom_row type=ram_1p impl=bram
                                                 ^
/nethome/wsun377/ece8893/FPGA_ECE8893_1/2026_Spring/lab1_test/project_1/hls/.autopilot/db/top.pp.0.cpp:6540:50: error: Invalid Directive: for current device, ram_1p + bram is invalid combination for BIND_STORAGE's option 'type + impl' [clang-diagnostic-error]
#pragma HLS BIND_STORAGE variable=scale_mem type=ram_1p impl=bram
                                                 ^
/nethome/wsun377/ece8893/FPGA_ECE8893_1/2026_Spring/lab1_test/project_1/hls/.autopilot/db/top.pp.0.cpp:6543:2: warning: Added loop label VITIS_LOOP_40_1:   [xilinx-label-all-loops]
 for (int j = 0; j < 64; j++) {
 ^~~
 VITIS_LOOP_40_1: 
/nethome/wsun377/ece8893/FPGA_ECE8893_1/2026_Spring/lab1_test/project_1/hls/.autopilot/db/top.pp.0.cpp:6543:2: note: FIX-IT applied suggested code changes
/nethome/wsun377/ece8893/FPGA_ECE8893_1/2026_Spring/lab1_test/project_1/hls/.autopilot/db/top.pp.0.cpp:6549:5: warning: Added loop label VITIS_LOOP_46_2:   [xilinx-label-all-loops]
    for (int i = 0; i < 256; i++) {
    ^~~
    VITIS_LOOP_46_2: 
/nethome/wsun377/ece8893/FPGA_ECE8893_1/2026_Spring/lab1_test/project_1/hls/.autopilot/db/top.pp.0.cpp:6549:5: note: FIX-IT applied suggested code changes
/nethome/wsun377/ece8893/FPGA_ECE8893_1/2026_Spring/lab1_test/project_1/hls/.autopilot/db/top.pp.0.cpp:6551:9: warning: Added loop label VITIS_LOOP_48_3:   [xilinx-label-all-loops]
        for (int j = 0; j < 64; j++) {
        ^~~
        VITIS_LOOP_48_3: 
/nethome/wsun377/ece8893/FPGA_ECE8893_1/2026_Spring/lab1_test/project_1/hls/.autopilot/db/top.pp.0.cpp:6551:9: note: FIX-IT applied suggested code changes
/nethome/wsun377/ece8893/FPGA_ECE8893_1/2026_Spring/lab1_test/project_1/hls/.autopilot/db/top.pp.0.cpp:6562:5: warning: Added loop label VITIS_LOOP_59_4:   [xilinx-label-all-loops]
    for (int i = 0; i < 256; i++) {
    ^~~
    VITIS_LOOP_59_4: 
/nethome/wsun377/ece8893/FPGA_ECE8893_1/2026_Spring/lab1_test/project_1/hls/.autopilot/db/top.pp.0.cpp:6562:5: note: FIX-IT applied suggested code changes
/nethome/wsun377/ece8893/FPGA_ECE8893_1/2026_Spring/lab1_test/project_1/hls/.autopilot/db/top.pp.0.cpp:6565:5: warning: Added loop label VITIS_LOOP_62_5:   [xilinx-label-all-loops]
    for (int jb = 0; jb < 64; jb += UF_NORM) {
    ^~~
    VITIS_LOOP_62_5: 
/nethome/wsun377/ece8893/FPGA_ECE8893_1/2026_Spring/lab1_test/project_1/hls/.autopilot/db/top.pp.0.cpp:6565:5: note: FIX-IT applied suggested code changes
/nethome/wsun377/ece8893/FPGA_ECE8893_1/2026_Spring/lab1_test/project_1/hls/.autopilot/db/top.pp.0.cpp:6568:2: warning: Added loop label VITIS_LOOP_65_6:   [xilinx-label-all-loops]
 for (int k = 0; k < UF_NORM; k++) {
 ^~~
 VITIS_LOOP_65_6: 
/nethome/wsun377/ece8893/FPGA_ECE8893_1/2026_Spring/lab1_test/project_1/hls/.autopilot/db/top.pp.0.cpp:6568:2: note: FIX-IT applied suggested code changes
/nethome/wsun377/ece8893/FPGA_ECE8893_1/2026_Spring/lab1_test/project_1/hls/.autopilot/db/top.pp.0.cpp:6583:5: warning: Added loop label VITIS_LOOP_80_7:   [xilinx-label-all-loops]
    for (int jb = 0; jb < 64; jb += UF_NORM) {
    ^~~
    VITIS_LOOP_80_7: 
/nethome/wsun377/ece8893/FPGA_ECE8893_1/2026_Spring/lab1_test/project_1/hls/.autopilot/db/top.pp.0.cpp:6583:5: note: FIX-IT applied suggested code changes
/nethome/wsun377/ece8893/FPGA_ECE8893_1/2026_Spring/lab1_test/project_1/hls/.autopilot/db/top.pp.0.cpp:6585:2: warning: Added loop label VITIS_LOOP_82_8:   [xilinx-label-all-loops]
 for (int k = 0; k < UF_NORM; k++) {
 ^~~
 VITIS_LOOP_82_8: 
/nethome/wsun377/ece8893/FPGA_ECE8893_1/2026_Spring/lab1_test/project_1/hls/.autopilot/db/top.pp.0.cpp:6585:2: note: FIX-IT applied suggested code changes
/nethome/wsun377/ece8893/FPGA_ECE8893_1/2026_Spring/lab1_test/project_1/hls/.autopilot/db/top.pp.0.cpp:6595:5: warning: Added loop label VITIS_LOOP_92_9:   [xilinx-label-all-loops]
    for (int i = 0; i < 256; i++) {
    ^~~
    VITIS_LOOP_92_9: 
/nethome/wsun377/ece8893/FPGA_ECE8893_1/2026_Spring/lab1_test/project_1/hls/.autopilot/db/top.pp.0.cpp:6595:5: note: FIX-IT applied suggested code changes
/nethome/wsun377/ece8893/FPGA_ECE8893_1/2026_Spring/lab1_test/project_1/hls/.autopilot/db/top.pp.0.cpp:6598:9: warning: Added loop label VITIS_LOOP_95_10:   [xilinx-label-all-loops]
        for (int j = 0; j < 64 + 1; j++) {
        ^~~
        VITIS_LOOP_95_10: 
/nethome/wsun377/ece8893/FPGA_ECE8893_1/2026_Spring/lab1_test/project_1/hls/.autopilot/db/top.pp.0.cpp:6598:9: note: FIX-IT applied suggested code changes
/nethome/wsun377/ece8893/FPGA_ECE8893_1/2026_Spring/lab1_test/project_1/hls/.autopilot/db/top.pp.0.cpp:6610:9: error: Invalid Directive: for current device, mul + dsp is invalid combination for bind_op [clang-diagnostic-error]
#pragma HLS BIND_OP variable=prod op=mul impl=dsp latency=MUL_LAT
        ^
